--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="row">
                <div class="col-6 col-md-4 offset-md-1">
                   <a href="#" class="subheader_logo"><img src="icons/logo_Uber.png" alt="logo"></a>
-                  <p class="subheader_official">Официальный партнер Uber в Москве</p>
+                  <p class="subheader_official">Официальный партнер Uber в Підарашка</p>
                </div>
                <div class=" xs-hidden col-md-3 offset-md-1 col-xl-2 offset-xl-2">
                   <div class="subheader_call">Звоните нам ежедневно</div>
