--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                <li class="menu_item"><a href="#require" class="menu_link">Со своим автомобилем</a></li>
                <li class="menu_item"><a href="#require" class="menu_link">На автомобиле компании</a></li>
                <li class="menu_item"><a href="#" class="menu_link">Требования</a></li>
-               <li class="menu_item"><a href="#" class="menu_link">Контакты</a></li>
+               <li class="menu_item"><a href="#" class="menu_link">Контакти</a></li>
                <li class="menu_item"><a href="#" class="menu_link">Оставить заявку</a></li>
             </ul>
          </div>
@@ -42,7 +42,7 @@
             <div class="row">
                <div class="col-6 col-md-4 offset-md-1">
                   <a href="#" class="subheader_logo"><img src="icons/logo_Uber.png" alt="logo"></a>
-                  <p class="subheader_official">Официальный партнер Uber в Підарашка</p>
+                  <p class="subheader_official">Официальный партнер Uber в Підарашке</p>
                </div>
                <div class=" xs-hidden col-md-3 offset-md-1 col-xl-2 offset-xl-2">
                   <div class="subheader_call">Звоните нам ежедневно</div>
